--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ img{float:right;
 
 
 
-<img src="C:\Users\Odin\Documents\miron.jpg" 
+<img src="miron.jpg" 
 <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                  <a href="#" class="fa fa-facebook"></a>
                  <a href="#" class="fa fa-twitter"></a>
